--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
+    "react-hot-loader": "^3.0.0-beta.4",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.2"
   },
