--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
+    "babel-plugin-transform-object-rest-spread": "^6.16.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-runtime": "^6.11.6",
-    "react-hot-loader": "^3.0.0-beta.4",
+    "react-hot-loader": "^3.0.0-beta.5",
+    "redux-logger": "^2.7.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.2"
   },
   "dependencies": {
     "react": "^15.3.1",
-    "react-dom": "^15.3.1"
+    "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
